<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="net.coffeewarriors.incentivetimer.SettingsFragment">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center_vertical"
        android:text="@string/pomodoro_length"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_medium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginStart="14dp"
        android:gravity="center_vertical"
        android:text="@string/min"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_medium"
        android:layout_alignBottom="@+id/textView4"
        android:layout_toEndOf="@+id/nb_pomodoro_length"
        android:layout_alignTop="@+id/textView4"
        android:id="@+id/textView" />


    <NumberPicker
        android:id="@+id/nb_pomodoro_length"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignBottom="@+id/textView4"
        android:layout_marginStart="32dp"
        android:layout_toEndOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignStart="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginBottom="32dp"

        android:gravity="center_vertical"
        android:text="@string/short_break_lenght"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_medium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:gravity="center_vertical"
        android:text="@string/min"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_medium"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignStart="@+id/textView"
        android:layout_alignTop="@+id/textView5"
        android:id="@+id/textView2" />

    <NumberPicker
        android:id="@+id/nb_short_break_length"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignBottom="@+id/textView5"
        android:layout_marginStart="32dp"
        android:layout_toEndOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignStart="@+id/textView5"
        android:layout_below="@+id/textView5"
        android:gravity="center_vertical"
        android:text="@string/long_break_length"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_medium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:gravity="center_vertical"
        android:text="@string/min"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_medium"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@+id/textView2" />


    <NumberPicker
        android:id="@+id/nb_long_break_length"
        android:layout_width="wrap_content"
        android:layout_height="100dp"

        android:layout_alignStart="@+id/nb_short_break_length"
        android:layout_alignBottom="@+id/textView6"
        android:layout_marginTop="29dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timer_change_warning"
        android:textColor="@color/colorPrimary"
        android:layout_below="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginTop="30dp" />


</RelativeLayout>
