<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp">

        <TextView
            android:id="@+id/unlocked_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/incentive_name"
            android:layout_below="@+id/incentive_name"
            android:layout_marginStart="4dp"
            android:gravity="center_horizontal"
            android:text="@string/unlocked"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"
            android:visibility="invisible"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/star_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="4dp"
            app:srcCompat="@drawable/ic_star_locked" />

        <TextView
            android:id="@+id/incentive_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/star_image"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/no_name"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/chance_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/incentive_name"
            android:layout_below="@+id/incentive_name"
            android:layout_marginStart="4dp"
            android:text="@string/chance"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_small" />


        <TextView
            android:id="@+id/chance_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/incentive_name"
            android:layout_marginStart="4dp"
            android:layout_toEndOf="@+id/chance_text"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"
            tools:text="50%" />

    </RelativeLayout>
</LinearLayout>